# embryo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: technical_route.md
skills/form-filling/: SKILL.md
skills/gui-login/: SKILL.md
src/embryo/: __init__.py  agent.py  config.py  logging.py  main.py  run.py
src/embryo/action/: __init__.py  backend.py  pyautogui_backend.py
src/embryo/benchmarks/: __init__.py  runner.py  tasks.py
src/embryo/core/: __init__.py  trace.py
src/embryo/gateway/: __init__.py  router.py
src/embryo/gateway/channels/: __init__.py  base.py  telegram.py  web.py
src/embryo/learning/: __init__.py  learner.py
src/embryo/memory/: __init__.py  embeddings.py  retriever.py  schemas.py  store.py
src/embryo/perception/: __init__.py  observation.py  observer.py  som.py  target_resolver.py
src/embryo/planner/: __init__.py  executor.py  models.py  planner.py
src/embryo/planning/: __init__.py  repair.py  schema.py
src/embryo/retrieval/: __init__.py  dense.py  fusion.py  reranker.py  retriever.py  sparse.py
src/embryo/runtime/: __init__.py  agent_loop.py  compaction.py  credential_pool.py  react_loop.py  session.py  tool_guardrails.py
src/embryo/sandbox/: __init__.py  docker_sandbox.py  sandbox_backend.py
src/embryo/scheduler/: __init__.py  cron.py
src/embryo/security/: __init__.py  auth.py  capabilities.py  policy.py  prompt_guard.py
src/embryo/server/: __init__.py  mcp.py  modes.py
src/embryo/skills/: __init__.py  lifecycle.py  manager.py  validator.py
src/embryo/tools/: __init__.py  computer_use.py  file_ops.py  mcp_client.py  memory_tools.py  registry.py  terminal.py
src/embryo/verification/: __init__.py  failure_classifier.py  verifier.py
src/embryo/vision/: __init__.py  llm.py
src/gui_agent/: __init__.py  agent.py  config.py  main.py  models.py
src/gui_agent/environment/: __init__.py  sandbox_manager.py
src/gui_agent/executor/: __init__.py  action_executor.py
src/gui_agent/locator/: __init__.py  target_locator.py
src/gui_agent/perception/: __init__.py  element_detector.py  ocr_engine.py  perception_engine.py  screen_capture.py
src/gui_agent/planner/: __init__.py  action_planner.py
src/gui_agent/replanner/: __init__.py  error_diagnoser.py  replanner.py
src/gui_agent/verifier/: __init__.py  result_verifier.py
tests/: conftest.py  test_agent_loop.py  test_memory.py  test_security.py  test_session.py  test_skills.py  test_tools.py
web/: index.html
