[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-agent"
version = "0.1.0"
description = "基于多模态界面感知与动态重规划的GUI智能体系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GUI Agent Team"}
]

dependencies = [
    "pillow>=10.0",
    "pytesseract>=0.3.10",
    "pyautogui>=0.9.54",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "openai>=1.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "vncdotool>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]
web = [
    "playwright>=1.40",
    "selenium>=4.15",
]
windows = [
    "pywinauto>=0.6.8",
]

[project.scripts]
gui-agent = "gui_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
