[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embryo"
version = "0.2.0"
description = "自主 AI Agent 框架 - 参考 OpenClaw + Hermes Agent 架构"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Embryo Team"}
]

dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
gui = [
    "pillow>=10.0",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.10",
    "pyperclip>=1.8",
]
browser = [
    "playwright>=1.40",
]
full = [
    "pillow>=10.0",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.10",
    "pyperclip>=1.8",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "playwright>=1.40",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
embryo = "embryo.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
