[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embryo"
version = "0.3.0"
description = "多后端 GUI Computer-Use 执行层 - 感知/规划/执行/验证 全链路"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Embryo Team"}
]

dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
local = [
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.10",
    "pyperclip>=1.8",
]
sandbox = [
    "docker>=7.0",
]
browser = [
    "playwright>=1.40",
]
anthropic = [
    "anthropic>=0.30",
]
full = [
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.10",
    "pyperclip>=1.8",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "playwright>=1.40",
    "docker>=7.0",
    "anthropic>=0.30",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
embryo = "embryo.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
